ready auth by token on front
add thymeleaf